Revert "party-list-generator squishy fix"
This reverts commit 3b7bdb8740787799e6ea2f83b065f54961653929.

--- a/parlassets/scss/_list_generator.scss
+++ b/parlassets/scss/_list_generator.scss
@@ -109,18 +109,6 @@
 
 .party-list-generator {
   @extend %list-generator;
-
-  .analyses {
-    flex-wrap: wrap;
-    margin-bottom: 11px;
-
-    li {
-      flex: 1;
-      margin-bottom: 3px;
-      min-width: 19%;
-      &:nth-child(5) { margin-right: 0; }
-    }
-  }
 }
 
 .member-list-generator {
@@ -133,17 +121,19 @@
     }
   }
 
-  .analyses {
-    flex-wrap: wrap;
-    margin-bottom: 11px;
+  // @include respond-to(limbo) {
+    .analyses {
+      flex-wrap: wrap;
+      margin-bottom: 11px;
 
-    li {
-      flex: 1;
-      margin-bottom: 3px;
-      min-width: 19%;
-      &:nth-child(5) { margin-right: 0; }
+      li {
+        flex: 1;
+        margin-bottom: 3px;
+        min-width: 19%;
+        &:nth-child(5) { margin-right: 0; }
+      }
     }
-  }
+  // }
 }
 
 .session-list-generator {
